# youtube-insights-chrome-plugin-mlflow-dvc-docker-aws

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: cicd.yaml
client/: README.md  manifest.json  popup.html  popup.js
deploy/scripts/: start_docker.sh
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 10_experiment_5_model_5_knn_with_hpt.ipynb  11_experiment_5_model_6_naive_bayes_with_hpt.ipynb  12_experiment_5_model_7_random_forest_with_hpt.ipynb  14_experiment_7_model_final_lightGBM.ipynb  15_experiment_9_custom_features.ipynb  16_experiment_10_stacking.ipynb  1_Preprocessing_&_EDA.ipynb  2_experiment_1_baseline_model.ipynb  3_experiment_2_bow_tfidf.ipynb  4_experiment_3_tfidf_(1,2)_max_features.ipynb  5_experiment_4_handling_imbalanced_data.ipynb  6_experiment_5_model_1_xgboost_with_hpt.ipynb  7_experiment_5_model_2_lightgbm_with_hpt.ipynb  8_experiment_5_model_3_svm_with_hpt.ipynb  9_experiment_5_model_4_log_reg_with_hpt.ipynb
scripts/: promote_model.py
server/: app.py  requirements.txt
src/features/: feature_building.py
src/model/: model_building.py  model_evaluation.py  register_model.py
src/utils/: pipeline_utils.py
tests/: mlflow_test.py  test_backend_api.py  test_load_model.py  test_load_model_from_registry.py  test_model_performance.py  test_model_signature.py
