[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "youtube_insights_chrome_plugin"
version = "0.0.1"
description = "A chrome plugin to get Youtube insights using an end-to-end ML model built using MLFlow \u0026 DVC and deployed using Docker, CI/CD and AWS EC2, S3 \u0026 ECR."
authors = [
  { name = "Niwesh Baraj" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["youtube_insights_chrome_plugin"]
include = ["pyproject.toml", "youtube_insights_chrome_plugin/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["youtube_insights_chrome_plugin"]
force-sort-within-sections = true

